# common

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  config.cmake.in  vcpkg-configuration.json  vcpkg.json
.cmake/: config.cmake.in  gtest.cmake  libcommonConfig.cmake.in  vcpkg.cmake
.github/workflows/: ubuntu.yml
.old/: CMakeLists.txt  main.c
.old/containers/adapters/queue/: double_stack_queue.c
.old/containers/associative/: CMakeLists.txt
.old/containers/associative/map/: list_map.c  map.c
.old/containers/sequence/list/: double_linked_list.c  double_linked_list.h  linked_list.h  list.c  list.h
.old/utilities/: pair.h
abstract/queue/: concurrent_queue.c  concurrent_queue.h  queue.c  queue.h
abstract/set/: set.h
abstract/stack/: stack.c  stack.h
argparser/: CMakeLists.txt
argparser/include/buracchi/common/argparser/: argparser.h
argparser/src/: argparser.c  parser.c  struct_argparser.h  usage.c  utils.c  utils.h
argparser/test/: CMakeLists.txt  argparser.cpp  main-mock.c  main-mock.h
arrays/bit_array/: concurrent_flag.c  concurrent_flag.h  flag.c  flag.h
concurrency/: CMakeLists.txt
concurrency/rwfslock/: CMakeLists.txt
concurrency/rwfslock/src/: rwfslock.c
concurrency/rwfslock/test/: CMakeLists.txt  rwfslock.cpp
concurrency/tpool/: CMakeLists.txt
concurrency/tpool/src/: tpool.c
concurrency/tpool/test/: CMakeLists.txt  tpool.cpp
containers/: CMakeLists.txt
containers/include/buracchi/common/containers/: list.h  map.h
containers/include/buracchi/common/containers/list/: linked_list.h
containers/include/buracchi/common/containers/map/: linked_list_map.h
containers/include/buracchi/common/containers/queue/: double_linked_list_stack_queue.h
containers/include/buracchi/common/containers/stack/: linked_list_stack.h
containers/include/buracchi/common/containers/types/: list.h  map.h
containers/include/buracchi/common/containers/types/list/: linked_list.h
containers/include/buracchi/common/containers/types/map/: linked_list_map.h
containers/include/buracchi/common/containers/types/queue/: double_linked_list_stack_queue.h
containers/include/buracchi/common/containers/types/stack/: linked_list_stack.h
containers/include/list/: linked_list.h
containers/include/map/: linked_list_map.h
containers/include/queue/: double_linked_list_stack_queue.h
containers/include/stack/: linked_list_stack.h
containers/src/: list.c  map.c  queue.c  stack.c
containers/src/list/: linked_list.c  linked_list_element.h  linked_list_iterator.c  linked_list_iterator.h
containers/src/map/: linked_list_map.c
containers/src/queue/: double_linked_list_stack_queue.c
containers/src/stack/: linked_list_stack.c
containers/test/: CMakeLists.txt
containers/test/list/: linked_list.cpp
containers/test/map/: linked_list_map.cpp
containers/test/queue/: double_linked_list_stack_queue.cpp
containers/test/stack/: linked_list_stack.cpp
include/: CMakeLists.txt
include/abstract/: dictionary.h  list.h  stack.h
include/adaptors/: stack.h
include/associative/: set.h
include/sequence/: list.h
iterators/: CMakeLists.txt
iterators/src/: iterator.c
logger/: CMakeLists.txt
logger/include/buracchi/common/logger/: logger.h
logger/src/: logger.c
logger/test/: CMakeLists.txt  logger.cpp
networking/: CMakeLists.txt
networking/communication_manager/: CMakeLists.txt
networking/communication_manager/include/buracchi/common/networking/: communication_manager.h  request_handler.h
networking/communication_manager/include/buracchi/common/networking/types/: request_handler.h
networking/communication_manager/src/: communication_manager.c  request_handler.c
networking/communication_manager/test/: CMakeLists.txt  communication_manager.cpp
networking/request_handler/: CMakeLists.txt
networking/socket2/: CMakeLists.txt
networking/socket2/include/buracchi/common/networking/: socket2.h
networking/socket2/include/buracchi/common/networking/nproto/: nproto_service_ipv4.h  nproto_service_unix.h
networking/socket2/include/buracchi/common/networking/tproto/: tproto_service_tcp.h
networking/socket2/include/buracchi/common/networking/types/: socket2.h
networking/socket2/include/buracchi/common/networking/types/nproto/: nproto_service_ipv4.h  nproto_service_unix.h
networking/socket2/include/buracchi/common/networking/types/tproto/: tproto_service_tcp.h
networking/socket2/src/: nproto_service.c  socket2.c  tproto_service.c
networking/socket2/src/nproto/: nproto_service_ipv4.c  nproto_service_unix.c
networking/socket2/src/tproto/: tproto_service_tcp.c
networking/socket2/test/: CMakeLists.txt  socket2.cpp
old/containers/associative/map/: CMakeLists.txt  list_map.h  map.h
old/iterators/: CMakeLists.txt
old/utilities/: CMakeLists.txt
src/: CMakeLists.txt  main.c
src/containers/associative/map/: CMakeLists.txt  map.h
src/containers/sequence/list/: CMakeLists.txt  double_linked_list.c  double_linked_list.h  linked_list.c  linked_list.h  list.c  list.h
src/iterators/: iterator.c  (+1 more)
statemachine/: CMakeLists.txt
statemachine/src/: statemachine.c
statemachine/test/: CMakeLists.txt  statemachine.cpp
test/: CMakeLists.txt
trees/: binary_node.c  binary_tree.c  binary_tree.h  binary_tree_node.c  binary_tree_node.h
utilities/: CMakeLists.txt
utilities/argparser/: CMakeLists.txt
utilities/argparser/src/: usage.c
utilities/misc/: CMakeLists.txt
utilities/misc/include/: utilities.h
utilities/misc/include/buracchi/common/utilities/: strto.h  utilities.h
utilities/misc/src/: strto.c  utilities.c
utilities/misc/test/: CMakeLists.txt  test_strto_int.cpp  test_strto_int16.cpp  test_strto_int32.cpp  test_strto_int64.cpp  test_strto_long.cpp  test_strto_long_long.cpp  test_strto_short.cpp  test_strto_uint16.cpp  test_strto_uint32.cpp  test_strto_uint64.cpp  test_strto_unsigned_int.cpp  test_strto_unsigned_long.cpp  test_strto_unsigned_long_long.cpp  test_strto_unsigned_short.cpp
utilities/try/: CMakeLists.txt
utilities/try/include/: try.h
utilities/try/include/buracchi/common/utilities/: try.h
(+34 files in other folders)
